# C-Boot-Camp

./: CMakeLists.txt  README.md  未命名.txt
02.Data type and variable/: printf限制宽度.c  scanf返回值.c  sizeof不计算.c  乘法运算.c  全局变量和局部变量  全局变量和局部变量.c  打印成绩.c  赋值忽略符  限制小数位数.c
03.Branch and loop/: for_break.c  goto  goto.c  test.c  while_break  分支中包含多条语句  打印工作日.c  计算3的余数_1.c  计算3的余数_2  逻辑取反操作符.c
04.Array/: 下标.c  二维数组的下标  计算数组的大小.c
05.Function/: 数组传参  闰年的判断  闰年的判断.c
08.Function recursion/: n的阶乘_2  打印数字  打印数字.c  斐波那契_count.c
09.Operator /: 右移操作符.c  左移操作符.c  结构体直接访问.c  表达式5.c
10.Deeply understand pointers(1)/: simulate_strlen  simulate_strlen.c  创建变量  指针+整数.c  指针+整数_2  指针变量的大小  指针变量的大小.c
11.Deeply understand pointers(2)/: const修饰变量.c  传值调用  传址调用  传址调用.c
12.Deeply understand pointers(3)/: arr_diff  arr_exception  pointer_access_arr  pointer_access_arr_2  pointer_access_arr_2.c  pointer_arr  second_arr  second_arr.c
13.Deeply understand pointers(4)/: calculator  calculator.c  second_arr  test
14.Deeply understand pointers(5)/: calculator_callback.c  qsort.c  test  test.c
16.Character functions and string functions/: sizeof  sizeof.c  strcmp  strerror  strlen  strlen.c  strncat.c  strncmp  strncmp.c  strncpy  strtok.c  tolower  tolower.c
17.C Language Memory Functions/: memcmp  memcmp.c  memcpy.c
18.Data Storage in Memory/: test_1.c
19.User-Defined Types - Structures/: change_ali  change_ali.c  str_arr  str_arr.c  str_ptr  str_tra_refer_2.c  struct.c  test1.c  test2.c
2.Data type and variable/: +-运算.c  printf限制宽度  乘法运算  前置++.c  后置++.c  负号.c
21.Dynamic Memory Management/: malloc  malloc.c  realloc  realloc.c  test2.c  test3.c  test4
24.etailed Explanation of Preprocessing/: #.c  change_line.c  define_h  do_forever  do_forever.c  reg  symbol  symbol.c  undef  undef.c
3.Branch and loop/: 9.条件操作符  9.条件操作符.c  default.c  for_1  for_break  for_continue  while_1.c  多个运算符.c  短路  闰年的判断  闰年的判断.c
4.Array/: 二维数组的输入和输出  二维数组的输入和输出.c  元素的打印  数组的存储.c  数组的输入.c  计算数组的大小
5.Function/: fun_add  sqrt
8.Function recursion/: 斐波那契  斐波那契_count
9.Operator /: 函数调用操作符.c  结构体直接访问  表达式4
assignment/3.分支和循环/: 3的倍数和  99乘法表.c  rand.c  三角形的判断.c  倒序打印  分数求和  打印素数.c  找素数.c  最大公约数  猜数字游戏.c  闰年的判断.c
assignment/4.数组/: 二分查找.c  字符汇聚  求平均值  遍历查找
assignment/5.函数/: 99乘法表.c
code/: test  test.c
code/10.Deeply understand pointers(1)/: simulate_strlen_2  simulate_strlen_2.c  test  指针+整数_2.c  指针-指针  指针-指针.c  指针-整数  指针-整数.c  指针的关系运算_2.c
code/10.深入理解指针(1)/: test.c  void*指针.c  void指针  创建变量.c  取地址  取地址.c  指针+-  指针+-.c  指针+整数  指针变量.c  指针的关系运算  指针的关系运算.c  指针的关系运算_2  解引用操作符.c
code/11.Deeply understand pointers(2)/: const修饰变量  const修饰指针变量  my_strlen.c  传值调用.c  使用前判断.c  指针初始化.c  指针指向空间被释放.c  指针未初始化
code/11.深入理解指针(2)/: const修饰指针变量.c  my_strlen  使用前判断  指针初始化  指针指向空间被释放  指针未初始化.c  指针越界访问  指针越界访问.c
code/12./: arr_count  arr_count.c  arr_exception.c  arr_name  bubble_soft_2  bubble_sort.c  bubble_sort_2.c  pointer_access_arr.c  pointer_arr.c  second_pointer  second_pointer.c
code/12.Deeply understand pointers(3)/: arr_diff.c  arr_name.c  bubble_sort  bubble_sort_2
code/13./: char_pointer.c  fun_add  fun_add.c  second_arr.c  函数指针数组.c
code/13.Deeply understand pointers(4)/: calculator  calculator_2  calculator_2.c  char_str_pointer.c  test.c  函数指针变量的使用  函数指针变量的使用.c
code/14.Deeply understand pointers(5)/: calculator_callback  qsort
code/16.Character functions and string functions/: strcat  strcat.c  strcmp.c  strcpy  strcpy.c  strerror.c  strncat  strncpy.c  strstr.c  strtok  toupper  toupper.c
code/17.C Language Memory Functions/: memcpy  memmove  memmove.c  memset  memset.c
code/18.Data Storage in Memory/: test_1  test_2  test_2.c
code/19.User-Defined Types - Structures/: mem_alignment  mem_alignment.c  str_ptr.c  str_tra_refer  str_tra_refer.c  str_tra_refer_2  struct  test  test.c  test1  test2  test3  test3.c
code/2.C语言数据类型和变量/: +-运算  printf  printf.c  same_name  same_name.c  scanf返回值  sizeof  sizeof.c  前置--  取模运算  取模运算.c  后置--  后置--.c  数据类型长度.c  显示正负号  负号  赋值忽略符.c  输出部分字符串  输出部分字符串.c  限制小数位数
(+165 files in other folders)
